<resources>
    <string name="app_name">ChatApp</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="sign_out">SignOut</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="message_sender_picture">Message sender Picture</string>
    <string name="message_image">Message Image</string>
    <string name="send_image_message">send Image Message</string>
    <string name="send_text_message">send Text Message</string>
    <string name="friend_profile_picture">Friend Profile Picture</string>
    <string name="add_friend">Add Friend</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="e_mail">E-Mail</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="conf_password">Conf Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="add">ADD</string>
    <string name="friends">Friends</string>
    <string name="no_saved_data">No Saved Data</string>
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="no_message">No Message</string>
    <string name="no_intenet_connection">No Internet Connection</string>
    <string name="friend_added">Friend Added</string>
    <string name="emai_doesnt_exist">This Email Doesn\'t Exist</string>
    <string name="done">Done</string>
    <string name="check_your_data">Pleas check your data</string>
    <string name="pleas_wait">Please Wait</string>
    <string name="loading">Loading...</string>
    <string name="dont_forget">Don\'t Forget</string>
    <string name="check_out">To Check out your Friends</string>
</resources>
