<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:gravity="center"
              android:padding="10dp"
              android:layout_height="match_parent">



        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_marginTop="10dp"
            />


    <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/phone_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/edit"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="@drawable/button_rounds"
            android:text="@string/edit"
            android:onClick="signUp"
            android:layout_marginTop="10dp"
            />



</LinearLayout>