<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ahmed.example.com.chatapp.ui.LoginActivity"
    tools:showIn="@layout/activity_login">


 <LinearLayout
     android:orientation="vertical"
     android:gravity="center"
     android:layout_gravity="center"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:layout_editor_absoluteY="0dp"
     tools:layout_editor_absoluteX="8dp">
     <EditText
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/e_mail"
         android:inputType="textEmailAddress"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_editor_absoluteY="133dp"/>

     <EditText
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="@+id/editText"
         app:layout_constraintRight_toRightOf="@+id/editText"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/editText"
         app:layout_constraintHorizontal_bias="1.0"/>

     <TextView
         android:id="@+id/login"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#fff"
         android:gravity="center"
         android:background="@drawable/button_rounds"
         android:text="@string/login"
         android:onClick="login"
         android:textStyle="bold"

         android:layout_marginTop="33dp"
         />
     <TextView
         android:id="@+id/sigup"
        android:gravity="center"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#fff"
         android:textStyle="bold"
         android:onClick="signUp"
         android:background="@drawable/button_rounds"
         android:text="@string/sign_up"
         android:layout_marginTop="10dp"
        />
 </LinearLayout>
</FrameLayout>
